objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>ACV Capital Lead Process</fullName>
        <description>Used by ACV Capital.  CAP - 745</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attempted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>No Opportunity</fullName>
        </values>
        <values>
            <fullName>Opportunity</fullName>
        </values>
        <values>
            <fullName>Untouched</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales</fullName>
        <description>Used for Sales Lead Generation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attempted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Untouched</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Transportation</fullName>
        <description>Used for Transportation Lead Generation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attempted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Untouched</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ALT_NUM__c</fullName>
        <description>CELL/ FAX OR ALT NUM</description>
        <label>ALT NUM</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When converting to an account this will map to &apos;Active__c&apos;</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TEXT(FLOOR(NOW() - CreatedDate)) &amp; &quot; Days: &quot; &amp;
TEXT(FLOOR(((NOW() - CreatedDate) - FLOOR(NOW() - CreatedDate)) * 24)) &amp; &quot; Hrs: &quot; &amp;
IF(
FLOOR(NOW() - CreatedDate) &gt; 0,
TEXT(ROUND((((MOD(((NOW() - CreatedDate) - (FLOOR(NOW() - CreatedDate))) , (FLOOR(NOW() - CreatedDate))) * 24) - (FLOOR(((NOW() - CreatedDate) - (FLOOR(NOW() - CreatedDate))) * 24))) * 60),0)) &amp; &quot; Mins&quot;,
TEXT(ROUND((((MOD(((NOW() - CreatedDate) - (FLOOR(NOW() - CreatedDate))) , 1) * 24) - (FLOOR(((NOW() - CreatedDate) - (FLOOR(NOW() - CreatedDate))) * 24))) * 60),0)) &amp; &quot; Mins&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Bank_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Comptroller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Comptroller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Unit_Sales__c</fullName>
        <label>Annual Unit Sales</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_On_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be marked true by LeadOwnerAssignmentBDR class if a user is assigned as the owner on insert.  If it stays false, it was assigned to a queue on insert.</description>
        <label>Assigned On Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Association_Membership__c</fullName>
        <inlineHelpText>Enter the name of the Association(s) the Dealer is a member of. i.e. NADA, NIADA, NABD</inlineHelpText>
        <label>Association Membership</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_ID__c</fullName>
        <description>used by Capital Checkout Lead Gen API Integration</description>
        <label>Auction ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AverageNumberofCarsBoughtperMonth__c</fullName>
        <label>Potential wholesale buy volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Sales__c</fullName>
        <description>used on Capital Form Assembly Form</description>
        <label>Average Monthly Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Wholesale_Vehicle_Price__c</fullName>
        <description>Used by Capital for Web to Lead Form (Form Assembly)</description>
        <label>Average Wholesale Vehicle Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BDR_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when the owner changes from Group to a User. This field indicates the BDR Email is sent from the trigger and prevents another email being sent if there is a reassignment</description>
        <label>BDR Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blitz_Notes__c</fullName>
        <description>Used by the Blitz team to make notes about specific leads</description>
        <label>Blitz Notes</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <inlineHelpText>If Franchise, what Brands do they carry?</inlineHelpText>
        <label>Brand</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__WatchDOGResult__c</fullName>
        <label>WatchDOG Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Potential Match</fullName>
                </value>
                <value>
                    <fullName>True Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Script__c</fullName>
        <label>Call Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Campaign_Message__c</fullName>
        <description>Used by Capital to indicate what message was displayed in Checkout</description>
        <label>Campaign Message</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkout Campaign</fullName>
                </value>
                <value>
                    <fullName>Digital-Floorplan-2 Waived Fees</fullName>
                </value>
                <value>
                    <fullName>Digital-Floorplan-Spring Savings 60for60 Tax Season</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capital_Product_Interest__c</fullName>
        <label>Capital Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Floorplan</fullName>
                </value>
                <value>
                    <fullName>ACV_Advantage</fullName>
                    <label>ACV Advantage</label>
                </value>
                <value>
                    <fullName>ACV_Accelerate</fullName>
                    <label>ACV Accelerate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ARDI__c</fullName>
        <label>Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AR__c</fullName>
        <label>Address Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ATZ__c</fullName>
        <label>Address Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AV__c</fullName>
        <label>Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__LES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Owner__c</fullName>
        <label>Co Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors_In_Play__c</fullName>
        <label>Competitors In Play</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Method_Preference__c</fullName>
        <label>Contact Method Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convert_Lead_Checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This checkbox will remain checked and used in a VR on the Account object to allow users to convert leads but disable their ability to create an account.</description>
        <label>Convert Lead Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Floorplan_Provider__c</fullName>
        <description>CAP-408</description>
        <label>Current Floorplan Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOT_Number__c</fullName>
        <label>DOT Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_ID__c</fullName>
        <inlineHelpText>Dealers Dun &amp; Bradstreet ID</inlineHelpText>
        <label>D&amp;B ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call in Progress</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Fresh Leads</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Other/See Notes</fullName>
                </value>
                <value>
                    <fullName>Scranton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Source_del__c</fullName>
        <description>Inactive
Dormant
Call in Progress
Fresh Leads
Scranton
Cars.com
Online Bidders
BHBR Trade Show</description>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive List</fullName>
                </value>
                <value>
                    <fullName>Call in progress list</fullName>
                </value>
                <value>
                    <fullName>Fresh Leads</fullName>
                </value>
                <value>
                    <fullName>Scranton</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Other/See notes</fullName>
                </value>
                <value>
                    <fullName>Cars.com</fullName>
                </value>
                <value>
                    <fullName>Dealer Rater</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>Market Research</fullName>
                </value>
                <value>
                    <fullName>InfoUSA-SR1</fullName>
                </value>
                <value>
                    <fullName>Online Bidders</fullName>
                </value>
                <value>
                    <fullName>InfoUSA-SR2</fullName>
                </value>
                <value>
                    <fullName>Buyer - Sales Introduction Email - Offer 9/5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_License_Received__c</fullName>
        <inlineHelpText>Attach Image of document in Notes and Attachments</inlineHelpText>
        <label>Date License Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Registered__c</fullName>
        <description>Date Registration was completed</description>
        <inlineHelpText>Date Registration was completed</inlineHelpText>
        <label>Date Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Tax_ID_Received__c</fullName>
        <description>Date ACV Received Dealer Tax ID</description>
        <inlineHelpText>Attach Image of the Document in the Notes and Attachments</inlineHelpText>
        <label>Date Tax ID Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealerMESH_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field that designates whether lead was imported using DealerMESH or not.</description>
        <inlineHelpText>If the field is checked, this lead has been imported using DealerMESH.</inlineHelpText>
        <label>DealerMESH Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank_Account_Owner_Email__c</fullName>
        <label>Dealer Bank Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank_Account_Owner_First_Name__c</fullName>
        <label>Dealer Bank Account Owner First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank_Account_Owner_Last_Name__c</fullName>
        <label>Dealer Bank Account Owner Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <description>Also used by Capital Checkout Lead Gen API Integration (Updated by Alisa VondeVeld 8/30/21)</description>
        <externalId>true</externalId>
        <inlineHelpText>Dealer ID from Dealership Manager</inlineHelpText>
        <label>Dealer ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone__c</fullName>
        <description>created for Capital Check-Out Lead Gen process (using API integration)</description>
        <label>Dealer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Independent - ACV Certified</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Dealer Group (Parent Account)</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Asbury</fullName>
                    <isActive>false</isActive>
                    <label>Asbury</label>
                </value>
                <value>
                    <fullName>Bayway Group</fullName>
                    <isActive>false</isActive>
                    <label>Bayway Group</label>
                </value>
                <value>
                    <fullName>DLN</fullName>
                    <isActive>false</isActive>
                    <label>DLN</label>
                </value>
                <value>
                    <fullName>DLNDLUDLW</fullName>
                    <isActive>false</isActive>
                    <label>DLNDLUDLW</label>
                </value>
                <value>
                    <fullName>DLNDLW</fullName>
                    <isActive>false</isActive>
                    <label>DLNDLW</label>
                </value>
                <value>
                    <fullName>DLQ</fullName>
                    <isActive>false</isActive>
                    <label>DLQ</label>
                </value>
                <value>
                    <fullName>DLU</fullName>
                    <isActive>false</isActive>
                    <label>DLU</label>
                </value>
                <value>
                    <fullName>DLUDLW</fullName>
                    <isActive>false</isActive>
                    <label>DLUDLW</label>
                </value>
                <value>
                    <fullName>DLW</fullName>
                    <isActive>false</isActive>
                    <label>DLW</label>
                </value>
                <value>
                    <fullName>Fanchise</fullName>
                    <isActive>false</isActive>
                    <label>Fanchise</label>
                </value>
                <value>
                    <fullName>Frachise</fullName>
                    <isActive>false</isActive>
                    <label>Frachise</label>
                </value>
                <value>
                    <fullName>Franchise/Indy</fullName>
                    <isActive>false</isActive>
                    <label>Franchise/Indy</label>
                </value>
                <value>
                    <fullName>Granchise</fullName>
                    <isActive>false</isActive>
                    <label>Granchise</label>
                </value>
                <value>
                    <fullName>Greenway</fullName>
                    <isActive>false</isActive>
                    <label>Greenway</label>
                </value>
                <value>
                    <fullName>Gurley leep</fullName>
                    <isActive>false</isActive>
                    <label>Gurley leep</label>
                </value>
                <value>
                    <fullName>Indendent</fullName>
                    <isActive>false</isActive>
                    <label>Indendent</label>
                </value>
                <value>
                    <fullName>Indeoendent</fullName>
                    <isActive>false</isActive>
                    <label>Indeoendent</label>
                </value>
                <value>
                    <fullName>Independent/Rental</fullName>
                    <isActive>false</isActive>
                    <label>Independent/Rental</label>
                </value>
                <value>
                    <fullName>Indepent</fullName>
                    <isActive>false</isActive>
                    <label>Indepent</label>
                </value>
                <value>
                    <fullName>Indepndent</fullName>
                    <isActive>false</isActive>
                    <label>Indepndent</label>
                </value>
                <value>
                    <fullName>Individual</fullName>
                    <isActive>false</isActive>
                    <label>Individual</label>
                </value>
                <value>
                    <fullName>Inependent</fullName>
                    <isActive>false</isActive>
                    <label>Inependent</label>
                </value>
                <value>
                    <fullName>Ken garff</fullName>
                    <isActive>false</isActive>
                    <label>Ken garff</label>
                </value>
                <value>
                    <fullName>Penske</fullName>
                    <isActive>false</isActive>
                    <label>Penske</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealership_Annual_Revenue__c</fullName>
        <inlineHelpText>Dealerships Annual Revenue from Dun &amp; Bradstreet</inlineHelpText>
        <label>Dealership Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealership_DBA_Name__c</fullName>
        <label>Dealership DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Status__c</fullName>
        <label>Demo Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_buy_online__c</fullName>
        <label>Do you buy online</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other/See Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <inlineHelpText>Select the Correct Status of the Required Documents for Registration</inlineHelpText>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dont_Send_BDR_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used override default behavior of sending an email from BDR. This will be primary used by Blitz team.</description>
        <label>Dont Send BDR Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Checker_Record_Type__c</fullName>
        <description>This field is used in Matching Rules and is populated by a workflow rule to update the value of this field with the DeveloperName of the Record Type</description>
        <label>Duplicate Checker Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN_Number__c</fullName>
        <description>00-00000000 or 000000000</description>
        <label>EIN Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIN_formula__c</fullName>
        <formula>if(EXPRN__Experian_Business__r.EXPRN__BIN__c != null &amp;&amp; EXPRN__Experian_Business__r.EXPRN__BIN__c != &apos;&apos;, EXPRN__Experian_Business__r.EXPRN__BIN__c, EXPRN__Experian_Business__r.EXPRN__Global_BIN__c)</formula>
        <inlineHelpText>Experian BIN</inlineHelpText>
        <label>BIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Business_Id__c</fullName>
        <formula>EXPRN__Experian_Business__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXPRN__Experian_Business_Id__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Experian Business information</description>
        <label>Experian Business</label>
        <referenceTo>EXPRN__Experian_Business__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Most_Recent_Decision_Lead__c</fullName>
        <formula>IF(EXPRN__Most_Recent_Decision_Status_Lead__c == &quot;Approve&quot; , EXPRN__Most_Recent_Decision_Status_Lead__c + &quot; &quot; + IMAGE(&quot;/resource/EXPRN__Approve&quot;, &quot;Approve&quot;), 

IF(EXPRN__Most_Recent_Decision_Status_Lead__c == &quot;Decline&quot;,EXPRN__Most_Recent_Decision_Status_Lead__c + &quot; &quot; + IMAGE(&quot;/resource/EXPRN__CreditDecisionDecline&quot;, &quot;Decline&quot;), 

IF(EXPRN__Most_Recent_Decision_Status_Lead__c == &quot;Manual Review&quot;,EXPRN__Most_Recent_Decision_Status_Lead__c + &quot; &quot; + IMAGE(&quot;/resource/EXPRN__CreditDecisionManualReview&quot;, &quot;Manual Review&quot;), &quot; &quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Most_Recent_Decision_Status_Lead__c</fullName>
        <label>Most Recent Decision Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__owner1Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Guarantor1 Lookup</label>
        <referenceTo>EXPRN__Owner_Guarantor_Lead_and_Opp__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__owner2Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Guarantor 2 Lookup</label>
        <referenceTo>EXPRN__Owner_Guarantor_Lead_and_Opp__c</referenceTo>
        <relationshipLabel>Leads (Owner Guarantor 2 Lookup)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FacebookHandle__c</fullName>
        <label>FacebookHandle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fleet_Lease_Blocker__c</fullName>
        <label>Fleet/Lease Blocker</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AutoIMS</fullName>
                </value>
                <value>
                    <fullName>Need Land</fullName>
                </value>
                <value>
                    <fullName>Damage $ CR</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floor_Plan_Provider__c</fullName>
        <label>Floor Plan Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Next Gear</fullName>
                </value>
                <value>
                    <fullName>AFC</fullName>
                </value>
                <value>
                    <fullName>Allied</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Task_Created_On__c</fullName>
        <label>Follow Up Task Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Demo_Completed__c</fullName>
        <label>Full Demo Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google Click Identifier, is a unique tracking parameter that Google uses to transfer information between your Google Ads account and your Google Analytics account.</description>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Place_ID__c</fullName>
        <description>Google Place ID found in BQ marketing leads table</description>
        <externalId>true</externalId>
        <label>Google Place ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HOT_NOTES__c</fullName>
        <description>I.E. NEXT GEAR , KNOWS TIM, ETC</description>
        <label>HOT NOTES</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_many_cars_do_you_sell_annually__c</fullName>
        <label>How many cars do you sell annually</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_cars_do_you_stock__c</fullName>
        <label>How many cars do you stock</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IST_Account_Owner_Phone__c</fullName>
        <formula>IST_Account_Owner__r.Phone &amp; &quot; x&quot; &amp; IST_Account_Owner__r.Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST Account Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IST_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IST Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IST_Rep_Phone__c</fullName>
        <inlineHelpText>Direct Number for the IST Rep</inlineHelpText>
        <label>IST Rep Phone</label>
        <type>Phone</type>
    </fields>
</CustomObject>